# app/Http/Requests/UserPreferenceRequest.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class UserPreferenceRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'categories' => 'required|array',
+            'categories.*' => 'required|integer|exists:categories,id',
+            'sources' => 'required|array',
+            'sources.*' => 'required|integer|exists:news_sources,id',
+        ];
+    }
+}
